--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@microsoft/sp-client-base": "~0.1.12",
     "@microsoft/sp-client-preview": "~0.1.12",
     "adal-angular": "^1.0.11",
+    "mobx": "^2.4.3",
+    "mobx-react": "^3.5.5",
     "office-ui-fabric-react": "0.36.0",
     "react": "0.14.8",
     "react-dom": "0.14.8"
